crates/vise/tests/ui/labels/bogus_label_name_in_metrics_attr.stderr
error[E0080]: evaluation panicked: Label name `methoD` is invalid: name contains a disallowed char 'D' at position 5; allowed chars are [_a-z0-9]
 --> tests/ui/labels/bogus_label_name_in_metrics_attr.rs:5:24
  |
5 |     #[metrics(labels = ["methoD"])]
  |                        ^^^^^^^^^^ evaluation of `_` failed here
